# asset-management

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  STRUCTURE.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  currency.py  database.py
backend/app/portfolio/: __init__.py  calculators.py  models.py  schemas.py
backend/app/providers/: __init__.py  base.py  portfolio_provider.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: __init__.py
backend/tests/unit/core/: __init__.py  test_config.py  test_currency.py
backend/tests/unit/portfolio/: __init__.py  test_allocation.py  test_cost_basis.py  test_xirr.py
backend/tests/unit/providers/: __init__.py  test_portfolio_provider.py
