[project]
name = "asset-management-backend"
version = "0.1.0"
description = "Local AI-powered Investment Research Platform — FastAPI backend (deterministic portfolio core)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.20",
    # uv is declared here so the project's own venv stays self-sufficient:
    # `uv sync` prunes undeclared packages, so without this line a sync would
    # remove uv from backend/.venv. Keeping it lets `python -m uv ...` run from
    # within the venv without relying on any external environment.
    "uv>=0.5",
]
# Postgres driver kept optional so the fast unit path (SQLite) stays lean and
# does not require a compiled asyncpg wheel. Install with: uv sync --extra postgres
postgres = [
    "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# pytest: fast + offline by default. Integration tests are opt-in only.
# Run fast unit suite:   uv run pytest
# Run integration only:  uv run pytest -m integration
# Coverage:              uv run pytest --cov=app
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q -m 'not integration'"     # default run excludes @pytest.mark.integration
asyncio_mode = "auto"                       # pytest-asyncio auto-awaits async tests
markers = [
    "integration: tests that touch real Postgres/pgvector or MCP servers (opt-in, offline-excluded).",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures build transactions inline; long single-line constructors are
# intentional for readability of the hand-computed scenarios.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]

